# grid-aware-battery

./: .gitignore  DECISIONS.md  README.md  make_tier1_figures.py  make_tier1_validation.py  make_tier2_ablation.py  make_tier2_ar1.py  make_tier2_figures.py  make_tier3_coopt.py  make_tier3_degradation.py  make_tier3_overfreq.py  make_tier3_pareto.py  make_tier3_sensitivity.py  make_tier3_speed.py  make_tier3_stage2.py  make_tier3_stage2_sweep.py  make_tier3_stage3.py  make_tier3_supervisor_sweep.py  make_tier3_surface.py  make_tier3_value.py  make_tier_imbalance.py  make_tier_riskmpc.py  pyproject.toml  requirements.txt
battery/: __init__.py  ar1_forecast.py  arbitrage.py  coopt.py  forecast.py  imbalance.py  mpc.py  risk_mpc.py
coupling/: __init__.py  coupled.py  supervisor.py
docs/: decisions.md  tier1-design.md  tier1-robustness.md  tier2.md  tier3.md
gridsim/: __init__.py  agc.py  fleet.py  model.py  plants.py  system.py
results/: tier1_ablation.csv  tier1_gain_sweep.csv  tier1_gen_trip.csv  tier1_robustness.csv  tier2_mpc.csv  tier2_terminal_ablation.csv  tier3_degradation.csv  tier3_overfreq.csv  tier3_pareto.csv  tier3_pareto_sensitivity.csv  tier3_speed.csv  tier3_stage2.csv  tier3_stage2_severe.csv  tier3_stage2_sweep.csv  tier3_stage3_timeline.csv  tier3_supervisor_sweep.csv  tier3_surface.csv  tier3_value.csv
scenarios/: __init__.py  gen_trip.py
tests/: test_agc.py  test_ar1_forecast.py  test_battery.py  test_coopt.py  test_model.py  test_system.py  test_tier3.py  test_tier3_coupling.py  test_tier3_supervisor.py
