[project]
name = "grid-aware-battery"
version = "0.1.0"
description = "Tier 1 grid frequency model with AGC secondary control for the Piclo grid-aware battery challenge"
requires-python = ">=3.10"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = ["ignore"]   # hush the PuLP/CBC solver deprecation noise
